bitfields/tests/compile_error_cases/errors/bitflag_invalid_into_endian_value.rs
use bitfields::bitflag;

#[bitflag(u8, into_endian = invalid)]
enum Flags {
    #[base]
    Unknown = 0,
    A = 1,
}

fn main() {}

